<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com
    Derived from Google IO Schedule App, Copyright 2010 Google, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout style="@style/TitleBar">
        <LinearLayout 
	        android:id="@+id/title_bar_logo"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
            android:layout_margin="10dip"
	        android:layout_alignParentLeft="true">
	        <ImageView 
	            style="@style/TitleBarLogo"
	            android:contentDescription="@string/description_logo"
	            android:src="@drawable/logo_text2"/>
        </LinearLayout>

        <ImageView style="@style/TitleBarSeparator"
            android:contentDescription="@string/description_logo" 
            android:layout_toRightOf="@+id/title_bar_logo"/>
        
        <TextView style="@style/TitleBarText"
            android:layout_toRightOf="@+id/title_bar_logo" />
        
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout"
            android:layout_toLeftOf="@+id/title_bar_action_search" />
        
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/title_bar_action_search"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch"
            android:layout_alignParentRight="true" />
	</RelativeLayout>
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:padding="6dip">
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1">
	        <Button android:id="@+id/home_btn_feature1"
	            style="@style/HomeButton"
	            android:onClick="onClickFeature"
	            android:text="@string/Kategorien"
	            android:drawableTop="@drawable/book"/>
	        <Button android:id="@+id/home_btn_feature2"
	            style="@style/HomeButton"
	            android:onClick="onClickFeature"
	            android:text="@string/title_feature2"
	            android:drawableTop="@drawable/heart"/>
	    </LinearLayout>
	
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1">
	        <Button android:id="@+id/home_btn_feature3"
	            style="@style/HomeButton"
	            android:onClick="onClickFeature"
	            android:text="@string/title_feature3"
	            android:drawableTop="@drawable/envelope"/>
	        <Button android:id="@+id/home_btn_feature4"
	            style="@style/HomeButton"
	            android:onClick="onClickFeature"
	            android:text="@string/title_feature4"
	            android:drawableTop="@drawable/zoom"/>
	    </LinearLayout>
	
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1">
	    </LinearLayout>
	
	</LinearLayout>
</LinearLayout>
