<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="#ffffff" >
	    
	    <!-- TITLE BAR -->
	
	    <LinearLayout style="@style/TitleBar">
	        <ImageButton style="@style/TitleBarAction"
	            android:contentDescription="@string/description_home"
	            android:src="@drawable/title_home"
	            android:onClick="onClickHome" />
	
	        <ImageView style="@style/TitleBarSeparator" />
	        <TextView style="@style/TitleBarText" />
	        <ImageButton style="@style/TitleBarAction"
	            android:contentDescription="@string/description_about"
	            android:src="@drawable/title_about"
	            android:onClick="onClickAbout" />
	        <ImageButton style="@style/TitleBarAction"
	            android:contentDescription="@string/description_search"
	            android:src="@drawable/title_search"
	            android:onClick="onClickSearch" />
	    </LinearLayout>
	
	    <!-- Title -->
	
		<LinearLayout
		    android:padding="2dip"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
			<TextView	    
		   		android:id="@+id/entryActivityTitle"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textSize="18sp"
			    android:textStyle="bold"
			    />	
		</LinearLayout>	
		
		<!-- ImageSlider -->
	
		<LinearLayout
		    style="@style/entryImageView"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical" >
			    
		    <ImageView
		        android:id="@+id/entryActivityImage"
		        android:layout_width="wrap_content"
		        android:layout_height="150dip"
		        android:layout_gravity="center" />
		    
		    <LinearLayout 
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content">
		    
			    <android.support.v4.view.ViewPager
			        android:id="@+id/pager"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1" />
			
			    <com.viewpagerindicator.CirclePageIndicator
			        android:id="@+id/indicator"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:padding="10dip" />
		    </LinearLayout>
		</LinearLayout>
			
		<!-- Description -->
		
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:padding="5dip" >
			
			<TextView 
		   		android:id="@+id/descriptionEntry"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/text_size_small"
			    />
		</LinearLayout>
		
		<!-- Additional Information -->
		<include layout="@layout/field_address"/>
		<include layout="@layout/field_phone"/>
		<include layout="@layout/field_fax"/>
		<include layout="@layout/field_email"/>
		<include layout="@layout/field_website"/>
		
		<Button
		    android:id="@+id/pdfButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/pdfButtonEntryText" />
		
	</LinearLayout>

</ScrollView>